@@ -1,3 +1,3 @@
 date version nhelpfiles nobjects ndatasets Rlines srclines
 "2022-05-25" "3.0-0" 224 500 0 30319 6183
-"2022-08-24" "2.999-999.028" 226 507 0 30606 6183
+"2022-08-27" "2.999-999.029" 226 507 0 30634 6183
